# routes/api.php
@@ -23,6 +23,7 @@ Route::group(['prefix' => 'v1/tasks', 'namespace' => 'Task'], function (){
     Route::post('deliver-task', 'TaskController@deliverTask');
     Route::post('refuse-task', 'TaskController@refuseTask');
     Route::post('acknowledge-task-failure', 'TaskController@acknowledgeTaskFailure');
+    Route::post('assign-task', 'TaskController@assignTask');
 });
 
 // Tasks Bulk APIs
