# storage/api-docs/api-docs.json
@@ -639,6 +639,85 @@
                     }
                 ]
             }
+        },
+        "/v1/tasks/assign-task": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Admin Can Assign task to driver",
+                "description": "Admin Can Assign task to driver",
+                "operationId": "assignTask",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "task_id",
+                        "in": "formData",
+                        "description": "Task ID to be assigned",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "driver_id",
+                        "in": "formData",
+                        "description": "Driver ID to assign",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "default": "Task is assigned successfully"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Failed Operation",
+                        "schema": {
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "default": "Fields are invalid"
+                                },
+                                "details": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "SERVER ERROR",
+                        "schema": {
+                            "properties": {
+                                "success": {
+                                    "type": "boolean",
+                                    "default": false
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "default": "Server Error"
+                                },
+                                "details": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "default": []
+                    }
+                ]
+            }
         }
     },
     "definitions": {
